// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM jFFjOF"
  >
    text
    <span
      class="sc-gtsrHT dPDMGR"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM jFFjOF"
  >
    text
    <span
      class="sc-gtsrHT fXiWfH"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
